patches/biome_diagnostics/tests/macros/category_paren.stderr
error: unexpected token
 --> tests/macros/category_paren.rs:4:22
  |
4 | #[diagnostic(message(description = Ident))]
  |                      ^^^^^^^^^^^

error: expected expression, found end of macro arguments
 --> tests/macros/category_paren.rs:3:17
  |
3 | #[derive(Debug, Diagnostic)]
  |                 ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Diagnostic` (in Nightly builds, run with -Z macro-backtrace for more info)
